    xor, if options nenoform_stop_on_boolean and synt_impl are both
    set.  (This combinations of options is not available from
    command-line tools.)

  - The spot::contains(a, b) function introduced in 2.6 was testing
    a⊆b instead of a⊇b as one would expect.  Infortunately the
    documentation was also matching the code, so this is a backward
    incompatible change.


New in spot 2.6  (2018-07-04)

  Command-line tools:

  - autfilt learned --is-colored to filter automata that use
    exactly one acceptance set per mark or transition.

  - autfilt learned --has-univ-branching and --has-exist-branching
    to keep automata that have universal branching, or that make
    non-deterministic choices.

  - autcross' tool specifications now have %M replaced by the name of
    the input automaton.

  - autcross now aborts if there is any parser diagnostic for the
    input automata (previous versions would use the input automaton
    whenever the parser would manage to read something).

  - ltlcross, ltldo, and autcross learned shorthands to call
    delag, ltl2dra, ltl2dgra, and nba2dpa.

  - When autfilt is asked to build a Büchi automaton from
    of a chain of many products, as in
    "autfilt -B --product 1.hoa ... --product n.hoa in.hoa"
    then it will automatically degeneralize the intermediate
    products to avoid exceeding the number of supported
    acceptance sets.

  - genltl learned to generate six new families of LTL formulas:
      --gf-equiv-xn=RANGE    GF(a <-> X^n(a))
      --gf-implies-xn=RANGE  GF(a -> X^n(a))
      --sejk-f=RANGE[,RANGE] f(0,j)=(GFa0 U X^j(b)), f(i,j)=(GFai U
                             G(f(i-1,j)))
      --sejk-j=RANGE         (GFa1&...&GFan) -> (GFb1&...&GFbn)
      --sejk-k=RANGE         (GFa1|FGb1)&...&(GFan|FGbn)
      --sejk-patterns[=RANGE]   φ₁,φ₂,φ₃ from Sikert et al's [CAV'16]
                             paper (range should be included in 1..3)

  - genltl --ms-example can now take a two-range argument,